// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Workspace migration builder field actions test suite It should build an create_field action 1`] = `
[
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "defaultValue": undefined,
      "description": "default flatten field metadata description",
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flatten field metadata label",
      "name": "flattenFieldMetadataName",
      "objectMetadataId": Any<String>,
      "options": undefined,
      "relationTargetFieldMetadata": undefined,
      "relationTargetFieldMetadataId": undefined,
      "relationTargetObjectMetadata": undefined,
      "relationTargetObjectMetadataId": undefined,
      "settings": undefined,
      "standardId": undefined,
      "standardOverrides": undefined,
      "type": "TEXT",
      "uniqueIdentifier": "poire",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flatten object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "defaultValue": undefined,
          "description": "default flatten field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flatten field metadata label",
          "name": "flattenFieldMetadataName",
          "objectMetadataId": Any<String>,
          "options": undefined,
          "relationTargetFieldMetadata": undefined,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadata": undefined,
          "relationTargetObjectMetadataId": undefined,
          "settings": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "poire",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flatten object metadata label plural",
      "labelSingular": "default flatten object metadata label singular",
      "namePlural": "defaultFlattenObjectMetdataNamePlural",
      "nameSingular": "defaultFlattenObjectMetdataNameSingular",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetRelationFields": [],
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an create_field action 2`] = `{}`;

exports[`Workspace migration builder field actions test suite It should build an create_field action 3`] = `
[
  {
    "flatFieldMetadata": {
      "createdAt": Any<ClockDate>,
      "defaultValue": undefined,
      "description": "default flatten field metadata description",
      "icon": "icon",
      "id": Any<String>,
      "isActive": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isNullable": true,
      "isSystem": false,
      "isUnique": false,
      "label": "flatten field metadata label",
      "name": "flattenFieldMetadataName",
      "objectMetadataId": Any<String>,
      "options": undefined,
      "relationTargetFieldMetadata": undefined,
      "relationTargetFieldMetadataId": undefined,
      "relationTargetObjectMetadata": undefined,
      "relationTargetObjectMetadataId": undefined,
      "settings": undefined,
      "standardId": undefined,
      "standardOverrides": undefined,
      "type": "TEXT",
      "uniqueIdentifier": "poire",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flatten object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [
        {
          "createdAt": Any<ClockDate>,
          "defaultValue": undefined,
          "description": "default flatten field metadata description",
          "icon": "icon",
          "id": Any<String>,
          "isActive": true,
          "isCustom": true,
          "isLabelSyncedWithName": false,
          "isNullable": true,
          "isSystem": false,
          "isUnique": false,
          "label": "flatten field metadata label",
          "name": "flattenFieldMetadataName",
          "objectMetadataId": Any<String>,
          "options": undefined,
          "relationTargetFieldMetadata": undefined,
          "relationTargetFieldMetadataId": undefined,
          "relationTargetObjectMetadata": undefined,
          "relationTargetObjectMetadataId": undefined,
          "settings": undefined,
          "standardId": undefined,
          "standardOverrides": undefined,
          "type": "TEXT",
          "uniqueIdentifier": "poire",
          "updatedAt": Any<ClockDate>,
          "workspaceId": Any<String>,
        },
      ],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flatten object metadata label plural",
      "labelSingular": "default flatten object metadata label singular",
      "namePlural": "defaultFlattenObjectMetdataNamePlural",
      "nameSingular": "defaultFlattenObjectMetdataNameSingular",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetRelationFields": [],
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_field",
  },
]
`;

exports[`Workspace migration builder field actions test suite It should build an create_field action 4`] = `{}`;

exports[`Workspace migration builder object actions test suite It should build a create_object action 1`] = `
[
  {
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flatten object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flatten object metadata label plural",
      "labelSingular": "default flatten object metadata label singular",
      "namePlural": "totos",
      "nameSingular": "toto",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetRelationFields": [],
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "create_object",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build a create_object action 2`] = `{}`;

exports[`Workspace migration builder object actions test suite It should build a delete_object action 1`] = `
[
  {
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flatten object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": true,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flatten object metadata label plural",
      "labelSingular": "default flatten object metadata label singular",
      "namePlural": "totos",
      "nameSingular": "toto",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetRelationFields": [],
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "delete_object",
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build a delete_object action 2`] = `{}`;

exports[`Workspace migration builder object actions test suite It should build an update_object action with all object updated fields 1`] = `
[
  {
    "flatObjectMetadata": {
      "createdAt": Any<ClockDate>,
      "dataSourceId": Any<String>,
      "description": "default flatten object metadata description",
      "duplicateCriteria": [],
      "flatFieldMetadatas": [],
      "flatIndexMetadatas": [],
      "icon": "icon",
      "id": Any<String>,
      "imageIdentifierFieldMetadataId": Any<String>,
      "isActive": true,
      "isAuditLogged": true,
      "isCustom": true,
      "isLabelSyncedWithName": false,
      "isRemote": false,
      "isSearchable": true,
      "isSystem": false,
      "labelIdentifierFieldMetadataId": Any<String>,
      "labelPlural": "default flatten object metadata label plural",
      "labelSingular": "default flatten object metadata label singular",
      "namePlural": "prastoins",
      "nameSingular": "prastouin",
      "shortcut": "shortcut",
      "standardId": undefined,
      "standardOverrides": undefined,
      "targetRelationFields": [],
      "targetTableName": "",
      "uniqueIdentifier": "pomme",
      "updatedAt": Any<ClockDate>,
      "workspaceId": Any<String>,
    },
    "type": "update_object",
    "updates": [
      {
        "from": true,
        "property": "isLabelSyncedWithName",
        "to": false,
      },
      {
        "from": "totos",
        "property": "namePlural",
        "to": "prastoins",
      },
      {
        "from": "toto",
        "property": "nameSingular",
        "to": "prastouin",
      },
    ],
  },
]
`;

exports[`Workspace migration builder object actions test suite It should build an update_object action with all object updated fields 2`] = `{}`;

exports[`Workspace migration builder object actions test suite It should not infer any actions as from and to are identical 1`] = `[]`;

exports[`Workspace migration builder object actions test suite It should not infer any actions as from and to are identical 2`] = `{}`;
